# lesp

./: .gitignore  LICENSE  README.md  pyproject.toml  tests.py
src/lesp/: analyze.py  core.py  datatypes.py
